Config file is getting closer to being ready to replace all variable occurences

--- a/config.yaml
+++ b/config.yaml
@@ -1,8 +1,10 @@
-INTERFACE =  "eth0"
-SNAP_LEN = 65536
-LOG_ALL_PACKETS = false
-FLUSH_AFTER = "10s"
+PCAP_INPUT:
+    INTERFACE: "eth0"
+    SNAP_LEN: 65536
+    LOG_ALL_PACKETS: false
+    FLUSH_AFTER: "10s"
 
-PROMETHEUS_EXPIRE_AFTER = 20
-PROMETHEUS_EXPIRATION_INTERVAL = 5
-LOCAL_MAC_ADDRESS = ""
+PROMETHEUS_OUTPUT:
+    PROMETHEUS_EXPIRE_AFTER: 20
+    PROMETHEUS_EXPIRATION_INTERVAL: 5
+    LOCAL_MAC_ADDRESS: ""
