--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,11 @@
 PCAP_INPUT:
-    INTERFACE: "eth0"
+    INTERFACE_NAME: "eth0"
     SNAP_LEN: 65536
     LOG_ALL_PACKETS: false
     FLUSH_AFTER: "10s"
+    LOCAL_MAC_ADDRESS: ""
 
 PROMETHEUS_OUTPUT:
+    ENABLED: true
     PROMETHEUS_EXPIRE_AFTER: 20
     PROMETHEUS_EXPIRATION_INTERVAL: 5
-    LOCAL_MAC_ADDRESS: ""
