Add configurable prometheus port

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -9,3 +9,4 @@ PROMETHEUS_OUTPUT:
     ENABLED: true
     PROMETHEUS_EXPIRE_AFTER: 20
     PROMETHEUS_EXPIRATION_INTERVAL: 5
+    PROMETHEUS_METRICS_PORT: 8080
