Configurable labels to reduce cardinality

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -10,3 +10,4 @@ PROMETHEUS_OUTPUT:
     PROMETHEUS_EXPIRE_AFTER: 20
     PROMETHEUS_EXPIRATION_INTERVAL: 5
     PROMETHEUS_METRICS_PORT: 8080
+    PROMETHEUS_EXCLUDE_FIELDS: ["destinationPort", "tlsVersion", "tcpFlag", "sourcePort"]
